--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,52 @@
-flask==1.1.2
-dash==1.18.1
-requests==2.25.1
-dash-core-components==1.14.1
-dash-html-components==1.1.1
-dash-renderer==1.8.3
-dash-table==4.11.1
+attrs==20.3.0
+Automat==20.2.0
+Brotli==1.0.9
+certifi==2020.12.5
+cffi==1.14.4
+chardet==4.0.0
+click==7.1.2
+constantly==15.1.0
+cryptography==3.3.1
+cssselect==1.1.0
+dash==1.19.0
+dash-core-components==1.15.0
+dash-html-components==1.1.2
+dash-renderer==1.9.0
+dash-table==4.11.2
+Flask==1.1.2
+Flask-Compress==1.8.0
 future==0.18.2
-pandas==1.0.3
-plotly==4.14.2
+hyperlink==21.0.0
+idna==2.10
+incremental==17.5.0
+itemadapter==0.2.0
+itemloaders==1.0.4
+itsdangerous==1.1.0
+Jinja2==2.11.2
+jmespath==0.10.0
+lxml==4.6.2
+MarkupSafe==1.1.1
+numpy==1.19.5
+pandas==1.2.1
+parsel==1.6.0
+plotly==4.14.3
+Protego==0.1.16
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pycparser==2.20
+PyDispatcher==2.0.5
+PyHamcrest==2.0.2
+pyOpenSSL==20.0.1
 python-dateutil==2.8.1
+pytz==2020.5
+queuelib==1.5.0
+requests==2.25.1
+retrying==1.3.3
+Scrapy==2.4.1
+service-identity==18.1.0
+six==1.15.0
+Twisted==20.3.0
+urllib3==1.26.3
+w3lib==1.22.0
+Werkzeug==1.0.1
+zope.interface==5.2.0
