--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 attrs==20.3.0
 Automat==20.2.0
+blis==0.7.4
 Brotli==1.0.9
+catalogue==2.0.1
 certifi==2020.12.5
 cffi==1.14.4
 chardet==4.0.0
@@ -8,16 +10,19 @@ click==7.1.2
 constantly==15.1.0
 cryptography==3.3.1
 cssselect==1.1.0
+cymem==2.0.5
 dash==1.19.0
 dash-core-components==1.15.0
 dash-html-components==1.1.2
 dash-renderer==1.9.0
 dash-table==4.11.2
+en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.0.0/en_core_web_sm-3.0.0-py3-none-any.whl
 Flask==1.1.2
 Flask-Compress==1.8.0
 future==0.18.2
 hyperlink==21.0.0
 idna==2.10
+importlib-metadata==3.4.0
 incremental==17.5.0
 itemadapter==0.2.0
 itemloaders==1.0.4
@@ -26,17 +31,23 @@ Jinja2==2.11.2
 jmespath==0.10.0
 lxml==4.6.2
 MarkupSafe==1.1.1
+murmurhash==1.0.5
 numpy==1.19.5
+packaging==20.9
 pandas==1.2.1
 parsel==1.6.0
+pathy==0.3.5
 plotly==4.14.3
+preshed==3.0.5
 Protego==0.1.16
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
 pycparser==2.20
+pydantic==1.7.3
 PyDispatcher==2.0.5
 PyHamcrest==2.0.2
 pyOpenSSL==20.0.1
+pyparsing==2.4.7
 python-dateutil==2.8.1
 pytz==2020.5
 queuelib==1.5.0
@@ -45,8 +56,18 @@ retrying==1.3.3
 Scrapy==2.4.1
 service-identity==18.1.0
 six==1.15.0
+smart-open==3.0.0
+spacy==3.0.1
+spacy-legacy==3.0.1
+srsly==2.4.0
+thinc==8.0.1
+tqdm==4.56.2
 Twisted==20.3.0
+typer==0.3.2
+typing-extensions==3.7.4.3
 urllib3==1.26.3
 w3lib==1.22.0
+wasabi==0.8.2
 Werkzeug==1.0.1
+zipp==3.4.0
 zope.interface==5.2.0
